# ChangeLog for sys-devel/gcc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.1046 2015/02/05 17:52:13 blueness Exp $

  05 Feb 2015; Anthony G. Basile <blueness@gentoo.org> gcc-4.9.2.ebuild:
  Add ~mips, bug #536874

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gcc-4.9.2.ebuild:
  Add ~x86, wrt bug #536874

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gcc-4.9.2.ebuild:
  Add ~sparc, wrt bug #536874

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gcc-4.9.2.ebuild:
  Add ~alpha, wrt bug #536874

  24 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gcc-4.9.2.ebuild:
  Add ~ia64, wrt bug #536874

  22 Jan 2015; Markus Meier <maekke@gentoo.org> gcc-4.9.2.ebuild:
  add ~arm, bug #536874

  19 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gcc-4.9.2.ebuild:
  Add ~ppc, wrt bug #536874

  19 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gcc-4.9.2.ebuild:
  Add ~ppc64, wrt bug #536874

  18 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gcc-4.9.2.ebuild:
  Add ~amd64, wrt bug #536874

  17 Jan 2015; Jeroen Roovers <jer@gentoo.org> gcc-4.9.0.ebuild,
  gcc-4.9.1.ebuild, gcc-4.9.2.ebuild:
  Marked ~hppa (bug #536874).

  05 Jan 2015; Magnus Granberg <zorry@gentoo.org> gcc-4.9.2.ebuild:
  Update piepatchset to 0.6.2 fix #528968 #528690

*gcc-4.8.4 (26 Dec 2014)

  26 Dec 2014; Magnus Granberg <zorry@gentoo.org> +gcc-4.8.4.ebuild:
  Add gcc 4.8.4, wrt bug #533116

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gcc-4.8.3.ebuild:
  Stable for sparc, wrt bug #516152

  04 Nov 2014; Mike Frysinger <vapier@gentoo.org> gcc-4.8.3.ebuild:
  Mark arm64/m68k/s390/sh stable.

  03 Nov 2014; Agostino Sarubbo <ago@gentoo.org> gcc-4.8.3.ebuild:
  Stable for x86, wrt bug #516152

*gcc-4.9.2 (01 Nov 2014)

  01 Nov 2014; Mike Frysinger <vapier@gentoo.org> +gcc-4.9.2.ebuild:
  Version bump #527480 by Markus.

  24 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> gcc-4.8.3.ebuild:
  amd64 stable wrt bug #516152
