@@ -10,6 +10,6 @@ PDEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/gcc-config-1.7
 RDEPEND=sys-libs/zlib nls? ( virtual/libintl ) virtual/libiconv >=dev-libs/gmp-4.3.2 >=dev-libs/mpfr-2.4.2 >=dev-libs/mpc-0.8.1 graphite? ( >=dev-libs/cloog-0.18.0 >=dev-libs/isl-0.11.1 )
 RESTRICT=strip
 SLOT=4.8
-SRC_URI=mirror://gnu/gcc/gcc-4.8.4/gcc-4.8.4.tar.bz2 mirror://gentoo/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.8.4-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.4-patches-1.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.8.4-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.4-patches-1.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.8.4-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 mirror://gentoo/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
+SRC_URI=mirror://gnu/gcc/gcc-4.8.4/gcc-4.8.4.tar.bz2 mirror://gentoo/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.8.4-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.8.4-patches-1.1.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.4-patches-1.1.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.8.4-patches-1.1.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.4-patches-1.1.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.8.4-patches-1.1.tar.bz2 mirror://gentoo/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.8.4-piepatches-v0.6.1.tar.bz2 mirror://gentoo/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnuconfig	00a0530e40148c254cebb925df0e87ef	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain	99d8dd3410afacc56fbd1532b8c07074	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=18cb2a0e53262e3d8d923c7339c2aeac
+_md5_=4c8ee3196484afb304926700750e454b
