@@ -123,7 +123,7 @@ DIST gcc-4.8.3-patches-1.1.tar.bz2 19882 SHA256 019cbe76f20f4e294b900ccb99a6b525
 DIST gcc-4.8.3-piepatches-v0.5.9.tar.bz2 13310 SHA256 d08e3770453edb728216243ecaf639ff7bc8aa77560fffdd561b2a0859d0b869 SHA512 d9d7dc4b7d8f52cce48dff36ee32db5346baed50968a1cacafa9a426849c5df5387061b26c8a0d2363bf91e5f55cb459cb4a176c5652690f914916047c0437f8 WHIRLPOOL 1e5cb3556b695de7f42ab44636194e86128f80bdffbe049fc1d4ee17b772bc1ea2089b3fe88bec60c52aab4bf5301344be27fd11be3c6cc8ef798d6441285c8b
 DIST gcc-4.8.3-uclibc-patches-1.0.tar.bz2 3014 SHA256 75f089ed44e33be8923f82eaa1d231f71d2cded475fb10938eded386647c5e04 SHA512 7e74fefae6136d2e132ee37905adbdf7f528d31a7bb67ed97bc99b6208f177a6105ef0f0e0c77eb87368359f7da49de768ff98ec07a569e19bfdd00f67a445a8 WHIRLPOOL 6fd766ba280fc0b96f1823315b5098a36d361dc9c8d179b2e262d72156508b70c560ef5095f3556bb5c922e495cc7eefb4bd5d970b2e4dff9e9ce654703fddc5
 DIST gcc-4.8.3.tar.bz2 86126808 SHA256 6a8e4f11b185f4fe2ed9d7fc053e80f8c7e73f800c045f51f9d8bea33f080f1e SHA512 2b40d231e8445f9c1654137df509f09ce1187b475138ca7f648f710d922a1718f740b2d8a37c26e16b5e27900c60358be98229ae884a6f1f70e9df44ad24d02b WHIRLPOOL 6dd3bd4b51bb9b8c52fb743bba28cde8612ff7090b71e56bf02d3613b91cd4c3c4dd91dbcb672985f22400d776870ba55550e1fc44afae9737092ceca5f83ebd
-DIST gcc-4.8.4-patches-1.0.tar.bz2 19920 SHA256 d8c2e202db35babc55f616278ebe164453f49e53eafa56cbdc0cadc41e1d92fd SHA512 cee3e758954857d9bc60ee91446e778e9a873dfb92ee07272afbd82e3aab9ae32544126ee88dbe65e93fa20fbcf098d005a8f800a50da1025140c91f7f7625eb WHIRLPOOL a5664c127b9f6ec3b0eeccafaf69f56d6fa2eaf1934f000adb3b748b87763a2e517b6216301ee9a200cd3764c6cbad8258c85e85420d9a2810786aa08cdf0ec7
+DIST gcc-4.8.4-patches-1.1.tar.bz2 20364 SHA256 6a2f1a72e7105a4ecef4fbf5b27d7ff100294de6e1ed04be91b7854f1b864395 SHA512 54badf96bb3c20adcb456d81a91a090fbc0410383ad0b6796295296be3e119214574b4b51e691688adfb7a1259d1e037d55b8b0211fccb993043572eb41180ed WHIRLPOOL 2fb6298ea17861c6b3915476eaeca89c5750c2f2a376ecbc6fb6a5986936e16161d75a2e4ca6000d5ea95014c4c0c8f8319868cf8d77898082f112b82a044604
 DIST gcc-4.8.4-piepatches-v0.6.1.tar.bz2 14110 SHA256 558bd1babcd687979ef6269b8e4774a3a06b860bda44e0a8aafaaa55423574b4 SHA512 464c7c482a244f6e3d07beb0bbe6d007bb95502d76d08dbb9daca92bcdb4560571f85eb10a73f542a03d1c7ba90fd1e50cfb8220f933ef559ff6f7867bc8bbdc WHIRLPOOL cc3ab1819905a32dd5983d1fae5c6812343c1426ec3ef387c56eaf46c73c646e376ae6351a151bd5579393be5055a231cb94e29ab03051f729ad4c685e69b77f
 DIST gcc-4.8.4-uclibc-patches-1.0.tar.bz2 3004 SHA256 c7f9d3b7eba23a8042edad469a5e2a2a7ad613a7a6b6c658179409d7859edf41 SHA512 0e22e57731725f2d2a53c7137ee667a54ff92d30a7532660bc75220e2445452605e3e377b56b99bc3a62feb65d46b315f28aba3e075ffabd1e9d60e94e35b4af WHIRLPOOL 472cdbd2c7f77ce6505f6f5feb27d530edc5250d6e167ecd4a8ab1cd877abf4ae842f4785c55486bddb49e2e553c688c24a6d7e998cb211cde844b9867436c09
 DIST gcc-4.8.4.tar.bz2 86220648 SHA256 4a80aa23798b8e9b5793494b8c976b39b8d9aa2e53cd5ed5534aff662a7f8695 SHA512 b4c84ebd754c026029d706ef52c4242df4dcadc6a22cc5669b3aa37ac9dc25bc9cd9651fda83fb24dd5d17b1710e6865a35bb6c5cd9b95d0971717453935ae8e WHIRLPOOL b8b44413da420d083d0edcb846ad1b619971c399638e629089ca3bc8b6008a41bd38d688199f1451171d32443c37ab749f44a3763c5150f2147f729d4bd45a4b
@@ -135,7 +135,7 @@ DIST gcc-4.9.1-patches-1.0.tar.bz2 18918 SHA256 5addded7684318fd7ad16dba5a1407c2
 DIST gcc-4.9.1-piepatches-v0.6.0.tar.bz2 13473 SHA256 299c63324cad10492709f46b84c8d20e16b20b95eea9c1b80401becb2ea3960e SHA512 2d314ebacb82b85f04618f38ebb521747a58f6baba311c0fbc8164cff46093f8477ad0954c7b3a65f61b9085854aac15ec5d4ee35a6ca95b1570869570458e1e WHIRLPOOL 43b4634e1d5e796ef265ff54d73908f3de2de692a7ea4de47e75b1a81ad8401b77bab14ed8fedcb02b689a4930a0915e63f0d2a0a4943da17c108953afa3e2af
 DIST gcc-4.9.1-uclibc-patches-1.0.tar.bz2 2552 SHA256 7f9bdbd0755ef6c5635261ed8a63b976f3e00f7b261a71e8b1da0bfc81cb8673 SHA512 9f1450167b3c7e29af1a4adaf09efb79e8e8937a6a315f661cf5db2074402747aaf60c1551f8517e394cfae738732dcd74c7f9693adea9299f2a72341d21e59a WHIRLPOOL e4a3fc96e892ef8fa6dd99294edff6c3fd7294655d9761f187879582cbcc823b8eba6d616d51cdd899495525d4821e882ad15dc22c060511f44fe600771fd9a8
 DIST gcc-4.9.1.tar.bz2 89854120 SHA256 d334781a124ada6f38e63b545e2a3b8c2183049515a1abab6d513f109f1d717e SHA512 8598106a4b7c03bb4d6e29fa1bfa9ee6b6390d1f1bca86c1ccd27aed830ae1d126daa50c4041016cbfa76090dd66c51f1ce06958b8ccd6c3be51eae875125593 WHIRLPOOL 45c663aca6fe3212cf6ff34611df3041204b942aedf5005b133f6ab4c40c994d405a9356429a06279b533706960d8ef80f363dd4ee7e78848052e621c49ad681
-DIST gcc-4.9.2-patches-1.0.tar.bz2 18213 SHA256 e4e9a665381beb4018779a14d5124528a9d5df0e0772f3b7639390d6bda51515 SHA512 27deba0db6a500b160829fdcf5fc9a70be4b4fbd45c89d18dd2d0808d42803657693d0ed0f2b664e020a0d2ac39cdfe550e397eb4c2a6f64220cae1e7a16ff20 WHIRLPOOL 7e04ed92038f19a9b00fe0022c2c7ce3df8621fccca95cb2da37333a5edcc0857efe96aed68f5c4b51db19ecd23ec1194412f1bc24730cea30db7b342c12dfdf
+DIST gcc-4.9.2-patches-1.1.tar.bz2 18621 SHA256 3e93536fe93c2b003bef0fd08abd297c527af801c1b3523de3f8527ef0927521 SHA512 1ec76cc01fc470628bcaffbc828e6f30f17d8e010444e7ce31c68f555a49ce4400a5413542931169b8889d65b89d3792c15487a9fa9b2b7d31b1f5e0f56553dc WHIRLPOOL d579fe35a2a973c9a5fb81afadcba77235980c9a26e676a7c19c9abf4fec828b796dcf2aa60bbd8febfdf74e2295cff8ae27e56c58dafec7e6a95f5963aef3b1
 DIST gcc-4.9.2-piepatches-v0.6.2.tar.bz2 14278 SHA256 f8876b172c2b4c5936b2cb18d3f092bfda8891bcdedcb569b63272a8530d81d0 SHA512 3f2d48743abba258ee6e298fc085f38d54c7b4cf4d431fe2efb83f718bdac3be916e67a3273aff1573db076decefbf4de3c4f706e102e6aafbce2371256048d8 WHIRLPOOL 76bbecad6d23793139040446721a5fb4711a9e272cf12545c51dd85c2d900e09e34dc0c260b80ad190a8072b475d779f5c6dd6b7891124bc4963b366f40989d3
 DIST gcc-4.9.2-uclibc-patches-1.0.tar.bz2 2540 SHA256 3ca63cba5edb01367352fcd558890a838630deb4c30f82f4c7e8074ad75e57fc SHA512 69f6f80e23efee0b937fca0f2056e17b4fe643817d2394bbfd16cbb453d74c76a0bb8727815f689a795897d9cd5e06ecc74d3d9ad45175fe837ad008eee09706 WHIRLPOOL 3946513e83960fe891267e103e434cae0616cd45b5e7eaff5f4f671741c1445941cf80b7497231cf50f137941c01859dbbac0a95745fb7ae663a3ee512bd7162
 DIST gcc-4.9.2.tar.bz2 89939747 SHA256 2020c98295856aa13fda0f2f3a4794490757fc24bcca918d52cc8b4917b972dd SHA512 e96cba06d572dbe7f382a2b00fd9297dcf9f9219d46a9ad0bd904dc36d5e7db3335e422640b79a27fed6fde91b0731732b94a0e2fbcd47344d6779f8ba1f4f9c WHIRLPOOL c4afdd0ec98e6f903044f1d3061fd96cf1e9bcbe2f90c388f5bc9ff8b2493b94367e84fdff7c2075ba37e2f950ecf2dba7c11786c653c2c7e86a5e8ff7d98e85
@@ -166,27 +166,27 @@ EBUILD gcc-4.8.0.ebuild 1429 SHA256 4828ad0dd422549320cb472d0f5cd2a595ec79089fd3
 EBUILD gcc-4.8.1-r1.ebuild 1516 SHA256 d62bd6099c0c91b8f8f70e679aa2eec7acb8fc682a028e0556aa7e1eefd9e194 SHA512 aa1eb15cc02176a44c9b3a487593d67b346548ffb8deba1406d784d68e0153d83dce13a362db8631d3f19855f7fdb127bdc6cb295406a73aa42d72089622841f WHIRLPOOL 0b72d65002dcdd8cfeefb20a6113fbc0aefbbd07a50d60b109c0d4843df3dfc836675ec5942a7c02a779622936f1e8ae6b753b47f4d4464e49628760b84fa5e7
 EBUILD gcc-4.8.2.ebuild 1523 SHA256 effc006e607c7b352d7acf15ff3572ef70c9929dfa406066896612a6f00602e2 SHA512 8b1fccce3f4e52208dd52c0858544088a3c2dd938358d322b7caaf0d0d16ecf0da317086596d44dfa68a953a7d795487f2e4377e7a43f9fe795097ec5894b38b WHIRLPOOL 3c55d56aa5c0f105e97f24a6f7e8433e90cb897627525b5da34f75bbc66e507e2c28fe0e1639c1dac63ff3273d5c6e0931aa7f5ccc04fb7017f3f290e248e121
 EBUILD gcc-4.8.3.ebuild 1506 SHA256 1d1a2e16ca3c2d9857cb04ac21a64f324d53492eaacd20fc507d35d8f6d854f4 SHA512 b5878cb65e955817c0f4cd8b07adea08549891adab8aa4f7b84e28935fcb8a96eb21852226d6e536afcda8de0103b6c88341ef407bbbbee7b0d58cf6e6ac1d79 WHIRLPOOL 2f39f321cc9c462456d66ac672e60c267127aa6ad11210dc5a7a8bbc54d01549f15a812c7c24474a3840f550a6eeacfe0a942866b4b6f9c191dc5f4ac6c33762
-EBUILD gcc-4.8.4.ebuild 1518 SHA256 b98bead09b64adf3abc685c3ae4ca6a84b18be1bb1695b17397a1bacef6c39e2 SHA512 fcb8e82f455e3a6f6e4239b83b2efb04db36478cc2123cee73c278e48d039d162b42807a537dd2af6951a383a4b5abcefd32ced088e49ff53920ab74e453b10f WHIRLPOOL f534d686eb7f82538f3f3e19a38ddaa6b3a3bebb95a73c47563e6f819a74db916127d416ab6e48dbb470d4436cf84ffd61ea55b030833d56f11926bf43601dba
+EBUILD gcc-4.8.4.ebuild 1521 SHA256 d892283d3637b56c2c57ee4d13f9077dd54a545eae2c6c10ede0f75ae6153a58 SHA512 0145a4e1ac12e6ec487f06ff24c1292769fcf880a30dabda0e6237e8dfa7fa5d55b1cef5c82f364ebfe3d75106160940354c0286c5faf7b099957b3a706832c5 WHIRLPOOL 5ffce82453e91bd1a3128c643ae41f248c6df4f6a09c4ce20e8b8dd57e3c268fd14527f45c7be5f3ffb9369af435c1a19c379ccb2b9d81147284e61d36a1a9d7
 EBUILD gcc-4.9.0.ebuild 1416 SHA256 65f404188fadc426fbfc091dd20c8487b3be3e328bad7642af78392e9c959f7e SHA512 929ac861bc27ebfbec6225f02678cf0caf866768ad2e79726bf9df9069685fc8fe52d684bb3ba42af4e406f00c8a3acda8236c7991e3e4284cfa9c75b598632b WHIRLPOOL d576448e1e268f9dbb9a2bdfa41c010a81cd87ae7259e92a821456d0c1f6f85b32369f055655c37722de614a3b1b03529f69715b831b86adb6414f3732787f86
 EBUILD gcc-4.9.1.ebuild 1416 SHA256 f4750ec96aa0d30ab305e644a542cb11dc2f71999fbdd5bc40799e334d75575d SHA512 e1207297335bf1d6cd4cc8e40b00efa097fb52dbd6beeb35930104f04ed8b3b0dcfb944a9f0e4f09808d5c299631acb1417842a72aa313afc9ba30169ed71dc4 WHIRLPOOL 975e19adc24a85663eead688e83623e4b8549301ed6949bbf3e70f6289aa205f050c29e785774b21a61781be4739f7af4daf657b3cda15fcac4fb231a238f95c
-EBUILD gcc-4.9.2.ebuild 1477 SHA256 68c4f4040009ef3dac5b7f7d7a63dcb0c394a67e6cdc10766bb3d317745eff64 SHA512 17fb938be1e992b1e21213fac4702aa167fa9876019bf9e76cfd66c3bea77de36fd5f7494a8c4381ba85c767dbfd9bb5ba415742a3e8720da9920cd6a2c7c91e WHIRLPOOL 9a2e9fa7d8674667ff57e36e18ec2d892573a7cad485531c05a6e2f0a426f093902a0049c3b5f489f2ac9fc5610b593b603d01f3e044a055001d99d6a02badfa
-MISC ChangeLog 67431 SHA256 380b308895213e478f1f99676958a33653b00b7ef812d560123d6cd7f945eef3 SHA512 7fb002c8d428575dc0c031fd6c0c84d987b508d2908439ae3e3ce27414f1bd28b1d4a933e28ca1c1ab2f81b0a1d5bd7e19e6ade5b98b213b2efb11e5fd910e37 WHIRLPOOL 3f81541294e2951515d5d7bd502c1b2aef73fb0fb1450e69f91172b9a44a3a559731ecf3e2fdaba0a30ac8d725cdd4e98e115507399ad4266ad016d54eea4a6f
+EBUILD gcc-4.9.2.ebuild 1477 SHA256 e84ceab63c174c3e730bb67f9ec2fbcd08f4a704e67ed757d63b88daa01cba7e SHA512 d00415b931b75a6253a385b8e75616c3ea4594d45489899a96014c2ef19d82404dee5292a38df301f1cc8f4261de1e80b96b1afa4f960405f4bd08c41ab3a2b7 WHIRLPOOL ae2bfe4a388c00eed6a1f6f6c4c7db1c36edcf8d1f58544472c036619b2678928b3e30a59f3a167d830c7b337f647a9e28a22b1d447c6d7589469b3a67687b17
+MISC ChangeLog 67599 SHA256 650ade5366f0b3b0c3a7b27bdb7088f15ba2c016df5e8354846322701523af90 SHA512 af7f637cd89a983259fe5ac2b563ee29b534bc08d2e5f3bfbfc0dfb687e15b4f7aa42a3fa702f26d3345fe8ef762490c90d4380914bc34853213e563cd6387e4 WHIRLPOOL 4f7671282cdecf1487e905a1ca391687a61bf359bc1f0af5bc0c76cdaa4b8d3bf6d65ae69e08b3359beb740013f5e656de4c3ecd002f397d36f65286005a5a55
 MISC ChangeLog-2006 112483 SHA256 108a7803efc91b08dd27ca4a83468637222a0685760f63bce724cb486fbc4022 SHA512 2887a66d03f4e1a9c60c743d7aa22147bdd95900b9e759c760a63f1a60c90008585b10b4f46ecc26e0149427bbdb8b83a9de4546d75e9ad935dd8e5377bf8870 WHIRLPOOL a2e1df0a7cead4373b5aeda333d952407049e1945f0a4e7774e1249e9f08ee33faafe0e74adec28b641bf037b8d6a350f45760a25c15e769b23eadb84b7ea48e
 MISC metadata.xml 2187 SHA256 6701f7fda30a9cf9544bada544d02ec6e4b0e966e6726c22f3d5f809d1ee5bd4 SHA512 e7e3d370e179ad354f1f8a2c2483c23b2de7127181d2b1721e60a681c428922b211444b3ba2ff463dae212c7f424a20cda23b2a3c6231c04074017a175681867 WHIRLPOOL 1cf09ec3cb5878195365e4dcc03751d60b0183fca7bf3d0c8570194c3fc9c98d3506e29ff5fb9b9ba497c03df35f3113976acb245cc3c559b30dadc157048597
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU0650AAoJEJOE+m71LUu6OpsQAJKnoHp3jxVfp9af/LGdaY7y
-fd0Pjm0CnPsiyIaSj60Z1mAbSccv5PJEMXJ2FoQOMr+KFB9lxU27EWi38XIIyBgw
-8HhdFS1wfv0M5vQK/dItuc4ZwSM9mE4zpW0OdyXUPHEwZQzlTian9xT9/gM5BL3p
-RZwoNeu+C5uMD8U2VxjrZcVjGYOw3WeozEtf1LqymdUCOYIEPz5jxOajdDcJ42LQ
-Q4ZWH3jWHipvCRnUCc5J6dynDDSXRZDErstOlJraNnB9J7/lqhSUXMD67ShnydH4
-eGZmeTErQq8w/hEexSFuhothUYNqhreyEob7Q6wzHay4rljSRODga+SwR0uls/YO
-9pRwt59dzlcHGx9gZYSvRMcezCSaZ5o0wKlHm2LKHsKxNbgjgZBFn357cnbU+7BE
-LCVnA61DocyeIvwQTlyXaP3GiGVgvrB74IBKGBSvNeM/3KHndtYz96cg9kJZHhqQ
-LlbK5ztj39n1H8lcLfMXHhPLF3xvlVal7KpXTEuNzpstnTjab7LT6IOl6gFhQy2J
-FIWt6mFPw2obzhvnwmZCc4mVmwPFbbJ+9E05Jr8YR6ipu2N+GaeHv+xrkusgm42+
-jTa5Zzu+hKNAWi0UZgrWxymHEHAEVQkgN4uCEdaPXCHLJByG19eAaEB8gmWb9cki
-DO9lWjiBa/QMxR1w9nVu
-=/Glq
+iQIcBAEBCAAGBQJU2VmZAAoJEJOE+m71LUu6yrQP/iSI53pk6Ro1qYW/VFQJGOdh
+sFnGIYnGd61pZNFXHWySny8xSyVxCOWKxsI0lBy4HHrZPd2ISDNbCrAFVXYq/ams
+vVYA9fhxBmrp30tIdnuheUR5E2JfqA2g7hZTAFKch//JCFmqG8GM7IrzLa7shr9G
+KpF9oC9eXlzUVaZb0pD95xM6jG3Q2B3WhGn8znNgsS9ypYTVP6BcB18w8MVjEDnX
+VCb9DGGkMxpoNcMUbL4hbIOUqEtAaRV3bG/GRX61KDPeMKjuS3yGcu75WeNUq5zf
+VeW2n2Fj1dn5Otqm7I8eQl0HRQQEF8NwzY2/GB4EkgTvP/AX3aX/MB0JKHwWUPrM
+ZLvyY0VcxXLcehtoRLQGHKSFPyd/RrsfYsZewCphQtqaLsNWYr6RZFFCCyQjRept
+GUq3K54zXvibGWaof74ZE0Zz5L06/XmP4tVlWrvRhbkoOrEuRLU850CErxHY+3E7
+S0WjoNpEZYMkUh8WH/Ar4dRG2pvjX01c3tul/6U9lhFZE2pUWE2EW7LRMHO3Sry3
+sHw3jIXaiGdU+4YNIVpkOyBtzDSwMclhX6EpVK6c3aVlDVvOunPxqmAUq6Pl28SU
+SbC6qLvosUzM6h4UkHApVCEkEGqArXvFAgFq1N6INE1E7IRItZwa+sG+PAo5HpT6
+GpikIQLlXTO6h4IZypkY
+=Na8C
 -----END PGP SIGNATURE-----
